# nlp_project

./: .gitignore  README.md  environment-dev.yml  environment-prod.yml  pyproject.toml
evaluation_results/: confusion_matrix.csv  evaluation_metrics.txt
examples/: evaluation_example.py  inference_example.py  train_improved_example.py  train_occupations_example.py  train_triplet_example.py
scripts/: analyze_poor_results.py
src/nlp_project/: __init__.py
src/nlp_project/data/: dataset.py  occupations_loader.py
src/nlp_project/evaluation/: evaluate.py
src/nlp_project/inference/: __init__.py  triplet_predict.py
src/nlp_project/models/: __init__.py  triplet_classifier.py
src/nlp_project/training/: train_triplet_occupations.py
tests/: __init__.py  test_classifier.py  test_occupations_loader.py
